--- a/META.yml
+++ b/META.yml
@@ -9,7 +9,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,7 +21,7 @@ no_index:
     - inc
 requires:
   Browser::Open: 0
-  Devel::Cover: 0.99
+  Devel::Cover: 1.08
   Digest::MD5: 0
   JSON::PP: 0
   PPI::HTML: 1.07
@@ -32,8 +32,8 @@ requires:
   Template: 2.00
   perl: 5.008002
 resources:
-  bugtracker: http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Task-Devel-Cover-Recommended
+  bugtracker: http://rt.cpan.org/Dist/Display.html?Name=Task-Devel-Cover-Recommended
   homepage: http://search.cpan.org/dist/Task-Devel-Cover-Recommended/
   license: http://dev.perl.org/licenses/
   repository: http://git.profvince.com/?p=perl%2Fmodules%2FTask-Devel-Cover-Recommended.git
-version: v0.990.0
+version: v1.80.0
